# incident-sre-manager-ai-agent

incident_commander_agent/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
incident_commander_agent/agent/: config.py  embeddings.py  llm.py
incident_commander_agent/agent/memory/: episodic.py  semantic_vector.py  summarizer.py
incident_commander_agent/agent/pipeline/: execute.py  plan.py  reflect.py
incident_commander_agent/agent/prompts/: critic.md  executor.md  planner.md  system.md
incident_commander_agent/agent/telemetry/: logging.py  tracing.py
incident_commander_agent/agent/token_budget/: counter.py  packer.py
incident_commander_agent/agent/tools/: mcp_api.py  mcp_server.py  schemas.py  security.py
incident_commander_agent/data_fixtures/graphs/: services.json
incident_commander_agent/data_fixtures/incidents/: kafka_hot_partition.md
incident_commander_agent/data_fixtures/metrics/: consumer_lag.csv
incident_commander_agent/data_fixtures/runbooks/: kafka_troubleshooting.md
incident_commander_agent/data_fixtures/scenarios/: kafka_hot_partition.yaml
incident_commander_agent/scripts/: ingest_vector_db.py  replay_scenarios.py
incident_commander_agent/tests/: test_end_to_end.py  test_mcp_api.py  test_memory.py  test_retrieval.py  test_token_budget.py  test_tools.py
