[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident_commander_agent"
version = "0.1.0"
description = "SRE Incident Commander Agent"
authors = [{name="You"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "tiktoken>=0.5.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "qdrant-client>=1.7.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.1",
    "scikit-learn>=1.4.0",
    "openai>=1.40.0",
    "uvloop>=0.19.0; platform_system != 'Windows'"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1.0",
    "ipykernel",
    "jupyterlab",
    "black",
    "ruff",
    "mypy"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
